apps/k8s/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: gateway
spec:
  gatewayClassName: envoy
  listeners:
    # Listener HTTP — utilisé uniquement pour les challenges ACME (cert-manager)
    # et la redirection vers HTTPS
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    # Listener HTTPS — trafic applicatif, TLS terminé ici
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: nathansakkriou-tls
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
